--- a/shortcuts/netlogo3D.desktop
+++ b/shortcuts/netlogo3D.desktop
@@ -4,9 +4,9 @@ Type=Application
 Name=NetLogo3D
 GenericName=NetLogo3D
 Comment=Multi-agent Programmable Modeling Environment
-Exec=/usr/bin/netlogo-6.1.0/NetLogo3D
+Exec=/usr/bin/NetLogo-6.1.0/NetLogo3D
 Categories=Development;Science;IDE;Simulation
-Icon=/usr/bin/netlogo-6.1.0/netlogo.png
+Icon=/usr/bin/NetLogo-6.1.0/netlogo.png
 Terminal=false
 StartupNotify=true
 
